--- a/procfile
+++ b/procfile
@@ -1,1 +1,1 @@
-web:    java $JAVA_OPTS -jar target/train-xing-0.0.1-SNAPSHOT.jar --port $PORT target/*.war
+web:    java -jar target/train-xing-0.0.1-SNAPSHOT.war
