--- a/pom.xml
+++ b/pom.xml
@@ -674,6 +674,12 @@
                     <artifactId>spring-boot-devtools</artifactId>
                     <optional>true</optional>
                 </dependency>
+                <dependency>
+                    <groupId>net.minidev</groupId>
+                    <artifactId>accessors-smart</artifactId>
+                    <version>1.1</version>
+                </dependency>
+
             </dependencies>
             <build>
                 <plugins>
